- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.5` (in progress)

- [ADD] Module `clj-otel-sdk-common` which wraps the OpenTelemetry SDK common library.
- [BREAK] Moved function `merge-resources-with-default` to new module `clj-otel-sdk-common`.
- [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.
- [ADD] Convenience function `add-event!` to add an event to the bound or current span.
- [ADD] Populate `err.type` trace semantic attribute on manually created client and server spans.
- [ADD] Support for adding Compojure route data to HTTP server spans.
- [MAINT] Ensure example microservices uberjars are built and run on the same JDK.
- Bump deps
* [MAINT] OpenTelemetry `1.33.0`
* [MAINT] gRPC `1.60.1`
* [MAINT] Pedestal `0.6.1`
* [MAINT] Various build deps

=== `0.2.4.1` (2023-10-01)

- [ADD] Module `clj-otel-sdk-extension-autoconfigure` which wraps the autoconfigure OpenTelemetry SDK extension.
Updated guide on using the autoconfigure module and adding initialisation code to application.
- [ADD] Updated functions to use a default `OpenTelemetry` instance declared by `clj-otel`, falling back to the global `OpenTelemetry` instance declared by Java OpenTelemetry if no default instance was previously configured.
Added recommendation to prefer use of default `OpenTelemetry` instance over the global `OpenTelemetry` instance, when using autoconfigure module or programmatic configuration of SDK.
Use of system property `otel.java.global-autoconfigure.enabled` or environment variable `OTEL_JAVA_GLOBAL_AUTOCONFIGURE_ENABLED` is discouraged.
- [BREAK] `steffan-westcott.clj-otel.sdk.otel-sdk/init-otel-sdk!` has a new option `register-shutdown-hook` enabled by default.